--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -66,22 +66,24 @@ section {
 /* Navigation Styles*/
 .navbar__menu ul {
     display:flex;
+    flex-wrap: wrap;
     padding-left: 0;
     margin: 0;
     text-align: right;
+    background-color: rgb(6 17 61);
 }
 
 .navbar__menu li {
     display: inline-block;
     padding: 2px;
     margin:5px;
-    border:2px dotted rgb(91, 199, 241);
-    border-radius: 2px;
-    background-color: rgba(222, 238, 221, 0.808);
-    font-family: 'cursive','Courier New', Courier, monospace;;
+    border:2px rgb(91, 199, 241);
+    border-radius: 20px;
+    background-color: rgba(98, 123, 128, 0.5);
+    font-family: 'cursive';
     font-size: larger;
     font-weight: bold;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 253, 253);
     }
     .navbar__menu li :hover{
         background-color: rgb(1, 34, 95);
@@ -208,7 +210,7 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
-    background: rgb(0, 0, 0);
+    background: rgb(5, 5, 5);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
@@ -234,4 +236,13 @@ section.your-active-class .landing__container::after {
 		           translate(-1em) 
 		           rotate(-360deg);
 	}
+}
+a {
+    font-family: 'Fira Sans', sans-serif;
+    color:rgb(250, 253, 250);
+    text-decoration: none;
+    font-style: oblique;
+    font-variant: small-caps;
+    letter-spacing: 0.3vw;
+    text-shadow: 2px 2px 2px rgb(202 187 96);
 }
